crates/renvor-cli/tests/snapshots/snapshots__manifest-v7-container.snap
---
source: crates/renvor-cli/tests/snapshots.rs
description: "Template version 7, variant `container`. A change here is a change to a generated tree: bump `templates::VERSION` in crates/renvor-cli/src/templates.rs and record the new snapshot with `cargo insta review`; do not overwrite this one."
---
[
  {
    "digest": "0a577f6f6e060d47d72903b6b796758bd78cd44f47441eaf9f5f9cbf07df1058",
    "path": ".dockerignore"
  },
  {
    "digest": "9f4ca6c95c67817bf8cb1ebf62df87e4ba842e80644ec8d6541138a6e0d307d1",
    "path": ".env.example"
  },
  {
    "digest": "a565fbc84fdc100740331de7893a78df444f12479bc7ed4c64e374f412d9aa39",
    "path": ".gitignore"
  },
  {
    "digest": null,
    "path": ".renvor/generated.toml"
  },
  {
    "digest": null,
    "path": "Cargo.lock"
  },
  {
    "digest": "533fa285f8e2dc34d9bd227f2c21d39fc2c7b5154e62f5715ed3d71b44975c01",
    "path": "Cargo.toml"
  },
  {
    "digest": "0676997e33c6d3e6d407310443f79154730904b764051d5bf58731e1527d7126",
    "path": "Dockerfile"
  },
  {
    "digest": "b210f5051836acc3aadf0cf08bc19fe11f778bbf73f4a2393496089147198f8e",
    "path": "README.md"
  },
  {
    "digest": "e5c757775d22744b3c65a20c2ea93c9733df1589477eddccc71d9ed938de3014",
    "path": "compose.yaml"
  },
  {
    "digest": "3156308d49dd3abda47b7db120cbfe413f367e1ee529d7a449538a877a8c1a31",
    "path": "renvor.toml"
  },
  {
    "digest": "6362f97c2c0841503f9741fe5bc971fd62211311d48d9ff9b8687ace0564e61d",
    "path": "src/domain.rs"
  },
  {
    "digest": "e44464236c1ee2c120fd253128c7290bc407dcb3b0928da07f4faa58195da6a2",
    "path": "src/main.rs"
  },
  {
    "digest": "77474dc7363e5df3d1beecf7a470550811b3b2605d8594e21ad1627f03a11116",
    "path": "src/seed.rs"
  }
]
