crates/renvor-cli/tests/snapshots/snapshots__manifest-v8-container.snap
---
source: crates/renvor-cli/tests/snapshots.rs
assertion_line: 94
description: "Template version 8, variant `container`. A change here is a change to a generated tree: bump `templates::VERSION` in crates/renvor-cli/src/templates.rs and record the new snapshot with `cargo insta review`; do not overwrite this one."
---
[
  {
    "digest": "0a577f6f6e060d47d72903b6b796758bd78cd44f47441eaf9f5f9cbf07df1058",
    "path": ".dockerignore"
  },
  {
    "digest": "9f4ca6c95c67817bf8cb1ebf62df87e4ba842e80644ec8d6541138a6e0d307d1",
    "path": ".env.example"
  },
  {
    "digest": "a565fbc84fdc100740331de7893a78df444f12479bc7ed4c64e374f412d9aa39",
    "path": ".gitignore"
  },
  {
    "digest": null,
    "path": ".renvor/generated.toml"
  },
  {
    "digest": null,
    "path": "Cargo.lock"
  },
  {
    "digest": "8634907b4802958e5e29d6d7c6de259207b66499f85b7bf71632855492c9608f",
    "path": "Cargo.toml"
  },
  {
    "digest": "2250c23ef68c00e1f15d61fb48d9fc6110763827d12a476cd20716deaa53c08f",
    "path": "Dockerfile"
  },
  {
    "digest": "1640f5fe093ffdbee30c6e1354d4d774617bec07d92206d9525fe3aca67d1481",
    "path": "README.md"
  },
  {
    "digest": "e5c757775d22744b3c65a20c2ea93c9733df1589477eddccc71d9ed938de3014",
    "path": "compose.yaml"
  },
  {
    "digest": "93a837a65a2041c5b9a25c6a8c9279fbf4530bccdb2684aa5112273f940e3967",
    "path": "renvor.toml"
  },
  {
    "digest": "5660e37017174b033bd91c10414dc241b26c76c226246bcbb7be2ef43b22775b",
    "path": "rust-toolchain.toml"
  },
  {
    "digest": "6362f97c2c0841503f9741fe5bc971fd62211311d48d9ff9b8687ace0564e61d",
    "path": "src/domain.rs"
  },
  {
    "digest": "e44464236c1ee2c120fd253128c7290bc407dcb3b0928da07f4faa58195da6a2",
    "path": "src/main.rs"
  },
  {
    "digest": "77474dc7363e5df3d1beecf7a470550811b3b2605d8594e21ad1627f03a11116",
    "path": "src/seed.rs"
  }
]
