crates/renvor-cli/tests/snapshots/snapshots__manifest-v8-domain.snap
---
source: crates/renvor-cli/tests/snapshots.rs
assertion_line: 94
description: "Template version 8, variant `domain`. A change here is a change to a generated tree: bump `templates::VERSION` in crates/renvor-cli/src/templates.rs and record the new snapshot with `cargo insta review`; do not overwrite this one."
---
[
  {
    "digest": "a565fbc84fdc100740331de7893a78df444f12479bc7ed4c64e374f412d9aa39",
    "path": ".gitignore"
  },
  {
    "digest": null,
    "path": ".renvor/generated.toml"
  },
  {
    "digest": null,
    "path": "Cargo.lock"
  },
  {
    "digest": "8634907b4802958e5e29d6d7c6de259207b66499f85b7bf71632855492c9608f",
    "path": "Cargo.toml"
  },
  {
    "digest": "e6e29638fb968d14694b702d8656aa2745a695083eea716998411b59b4277078",
    "path": "README.md"
  },
  {
    "digest": "c521b363a98718245daf41d58dbc09f16bdd4c395d42b819a6cce529f9ca6712",
    "path": "renvor.toml"
  },
  {
    "digest": "5660e37017174b033bd91c10414dc241b26c76c226246bcbb7be2ef43b22775b",
    "path": "rust-toolchain.toml"
  },
  {
    "digest": "fd4696664eb056c1ed87f231ea3f324dd38021e26900455a6648484b59d642b3",
    "path": "src/domain.rs"
  },
  {
    "digest": "9bc8c1f517c50dbefef1eeab375021a77377f74be7e9b9f489889134892e60be",
    "path": "src/main.rs"
  }
]
