crates/renvor-cli/tests/snapshots/snapshots__manifest-v8-postgres.snap
---
source: crates/renvor-cli/tests/snapshots.rs
assertion_line: 94
description: "Template version 8, variant `postgres`. A change here is a change to a generated tree: bump `templates::VERSION` in crates/renvor-cli/src/templates.rs and record the new snapshot with `cargo insta review`; do not overwrite this one."
---
[
  {
    "digest": "a565fbc84fdc100740331de7893a78df444f12479bc7ed4c64e374f412d9aa39",
    "path": ".gitignore"
  },
  {
    "digest": null,
    "path": ".renvor/generated.toml"
  },
  {
    "digest": null,
    "path": "Cargo.lock"
  },
  {
    "digest": "d16deab28d6b13dcd4bf5ad2f4a160c3c5062d29a80e824774f1f4a08a6590ae",
    "path": "Cargo.toml"
  },
  {
    "digest": "7a99a325f1486e2f3bb7567e46b3a86db53f973586c76c10f9d1a2640d73446f",
    "path": "README.md"
  },
  {
    "digest": "4b1908a06a2cda08e9ae9d3530f823c99d8c675d9482dd6bbd952529d35b003e",
    "path": "migrations/0001_create_item.down.sql"
  },
  {
    "digest": "95b32e5994a63125d2f7b15472d9ab05046f0fa9e82dbe7220a64d51811ca47f",
    "path": "migrations/0001_create_item.up.sql"
  },
  {
    "digest": "42ffe2547b19911f34d4f4ae9cd71a204777f6583879d1927c96557f03ab02fb",
    "path": "renvor.toml"
  },
  {
    "digest": "5660e37017174b033bd91c10414dc241b26c76c226246bcbb7be2ef43b22775b",
    "path": "rust-toolchain.toml"
  },
  {
    "digest": "fd4696664eb056c1ed87f231ea3f324dd38021e26900455a6648484b59d642b3",
    "path": "src/domain.rs"
  },
  {
    "digest": "f01eca6bd86f411da424f5b2b305a1bedd9e7f2007551ff0fa2113a21485a9e1",
    "path": "src/main.rs"
  },
  {
    "digest": "59c3b1d97b7f89a5159f0a36c110e7b4444af5d1c8741f536ecbb04a7d703d61",
    "path": "src/persistence.rs"
  }
]
