crates/renvor-cli/tests/snapshots/snapshots__manifest-v8-seeded.snap
---
source: crates/renvor-cli/tests/snapshots.rs
assertion_line: 94
description: "Template version 8, variant `seeded`. A change here is a change to a generated tree: bump `templates::VERSION` in crates/renvor-cli/src/templates.rs and record the new snapshot with `cargo insta review`; do not overwrite this one."
---
[
  {
    "digest": "a565fbc84fdc100740331de7893a78df444f12479bc7ed4c64e374f412d9aa39",
    "path": ".gitignore"
  },
  {
    "digest": null,
    "path": ".renvor/generated.toml"
  },
  {
    "digest": null,
    "path": "Cargo.lock"
  },
  {
    "digest": "8634907b4802958e5e29d6d7c6de259207b66499f85b7bf71632855492c9608f",
    "path": "Cargo.toml"
  },
  {
    "digest": "e6e29638fb968d14694b702d8656aa2745a695083eea716998411b59b4277078",
    "path": "README.md"
  },
  {
    "digest": "be17dd1f97310abf14ea01b4c3d8fadf052788e79dffa9a9e9aff0f23e3342d8",
    "path": "renvor.toml"
  },
  {
    "digest": "5660e37017174b033bd91c10414dc241b26c76c226246bcbb7be2ef43b22775b",
    "path": "rust-toolchain.toml"
  },
  {
    "digest": "6362f97c2c0841503f9741fe5bc971fd62211311d48d9ff9b8687ace0564e61d",
    "path": "src/domain.rs"
  },
  {
    "digest": "e44464236c1ee2c120fd253128c7290bc407dcb3b0928da07f4faa58195da6a2",
    "path": "src/main.rs"
  },
  {
    "digest": "77474dc7363e5df3d1beecf7a470550811b3b2605d8594e21ad1627f03a11116",
    "path": "src/seed.rs"
  }
]
